GL/concurrent-systems-exercises/02_microservices/microservices/deploy/01_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app
  namespace: your-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-app
  template:
    metadata:
      labels:
        app: api-app
    spec:
      imagePullSecrets:
        - name: regcred-gitlab
      containers:
      - image: registry.gitlab.com/abc/def:latest
        imagePullPolicy: Always
        name: api-app
        ports:
        - containerPort: 8081
        - containerPort: 9002
        resources:
          limits:
            cpu: "1"
            memory: "100Mi"
        volumeMounts:
          - mountPath: /tmp
            name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir: {}
