GL/concurrent-systems-exercises/02_microservices/microservices/deploy/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatever
  namespace: your-namespace
spec:
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  type: ClusterIP
  selector:
    app: api-app
---
apiVersion: v1
kind: Service
metadata:
  name: another-one
  namespace: your-namespace
spec:
  ports:
    - port: 9002
      targetPort: 9002
      protocol: TCP
      name: grpc
  type: ClusterIP
  selector:
    app: api-app
